--- a/practical-courses/01-cat-photo-app/index.html
+++ b/practical-courses/01-cat-photo-app/index.html
@@ -39,6 +39,7 @@
             src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/lasagna.jpg"
             alt="A slice of lasagna on a plate."
           />
+
           <figcaption>Cats <em>love</em> lasagna.</figcaption>
         </figure>
 
@@ -55,6 +56,7 @@
             src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/cats.jpg"
             alt="Five cats looking around a field."
           />
+
           <figcaption>Cats <strong>hate</strong> other cats.</figcaption>
         </figure>
       </section>
@@ -65,15 +67,20 @@
         <form action="https://freecatphotoapp.com/submit-cat-photo">
           <fieldset>
             <legend>Is your cat an indoor or outdoor cat?</legend>
+
             <label><input id="indoor" type="radio" name="indoor-outdoor" value="indoor" checked /> Indoor</label>
             <label><input id="outdoor" type="radio" name="indoor-outdoor" value="outdoor" /> Outdoor</label>
           </fieldset>
 
           <fieldset>
             <legend>What's your cat's personality?</legend>
+
             <input id="loving" type="checkbox" name="personality" value="loving" checked />
-            <label for="loving">Loving</label> <input id="lazy" type="checkbox" name="personality" value="lazy" />
+            <label for="loving">Loving</label>
+
+            <input id="lazy" type="checkbox" name="personality" value="lazy" />
             <label for="lazy">Lazy</label>
+
             <input id="energetic" type="checkbox" name="personality" value="energetic" />
             <label for="energetic">Energetic</label>
           </fieldset>
